# libascii

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO  TODO_ACTORS  TODO_ARCHITECTURE
assets/: ascii.fs.glsl  ascii.vs.glsl  simple.fs.glsl  terrain.vs.glsl  test.fs.glsl  test.vs.glsl
assets/config/: default.json  scheme.json
assets/palettes/: c64.json
assets/shaders/: ascii.fs.glsl  ascii.vs.glsl
bld/: CMakeCache.txt  Makefile  cmake_install.cmake  gl_app
bld/assets/: simple.vs.glsl  terrain.fs.glsl  test.fs.glsl  test.vs.glsl
bld/glfw/: Makefile  cmake_install.cmake
bld/glfw/src/: Makefile  cmake_install.cmake
bld/glxw/: Makefile  cmake_install.cmake
bld/glxw/include/GLXW/: glxw_es2.h
bld/glxw/src/: glxw.c  glxw_es2.c
bld/ut/: Makefile  cmake_install.cmake
cmake/: Color.cmake  generate.py
cmake/templates/: renderer_factory.cxx.template
design/: assets  assets_new  color  configuration  global_state  initialization_sequence  logging  mixed  process  save_path_management  texture_management
fixed_stl/: variant_fixed
include/: actions.hxx  asset_manager.hxx  build_settings.hxx  commandline.hxx  configuration.hxx  diagnostics.hxx  empty_vbo.hxx  engine.hxx  frame_guard.hxx  game_info.hxx  global_state.hxx  global_state_impl.hxx  global_system.hxx  input.hxx  input_manager.hxx  lighting.hxx  log_manager.hxx  palette.hxx  palette_loader.hxx  path_manager.hxx  process.hxx  process_info.hxx  process_manager.hxx  program.hxx  render_context.hxx  renderer.hxx  screen.hxx  shader.hxx  shadow_texture.hxx  shapes.hxx  texture.hxx  texture_set.hxx  uniform.hxx  unique_resource.hxx  utility.hxx  weighted_collection.hxx  weighted_distribution.hxx
include/application_layer/config/: cl_source.hxx  config_entry.hxx  config_scheme.hxx  config_source.hxx  default_source.hxx  file_source.hxx  ptree_merge.hxx
include/capi/: config.h  debug.h  engine.h  input.h  lighting.h  logger.h  memory.h  path.h  render_context.h  renderer.h  screen.h  types.h
include/utility/pnfa/: action.hxx  automaton.hxx  automaton_base.hxx  automaton_base.txx  automaton_base_impl.hxx  condition.hxx  edge.hxx  edge_base.hxx  enum.hxx  node.hxx  node_base.hxx  probabilistic_edge.hxx  probability.hxx  sub_automaton.hxx  sub_automaton_impl.hxx  utility.hxx
minitrace/: CMakeLists.txt
minitrace/include/: minitrace.h
minitrace/src/: minitrace.c
model/: roguelike.asta
nuklear/: CMakeLists.txt
shaders/: ascii.fs.glsl  ascii.vs.glsl
src/: build_settings.cxx  c_api.cxx  cell.cxx  cl_source.cxx  commandline.cxx  config_scheme.cxx  configuration.cxx  default_source.cxx  diagnostics.cxx  empty_vbo.cxx  engine.cxx  file_source.cxx  game_info.cxx  global_state.cxx  global_system.cxx  input_manager.cxx  light_manager.cxx  lighting.cxx  log_manager.cxx  main.cxx  palette.cxx  palette_loader.cxx  path_manager.cxx  process.cxx  process_info.cxx  process_manager.cxx  ptree_merge.cxx  render_context.cxx  render_manager.cxx  screen_manager.cxx  shadow_texture.cxx  texture.cxx  texture_manager.cxx  texture_set.cxx
src/capi/: config.cxx  debug.cxx  engine.cxx  input.cxx  lighting.cxx  logger.cxx  memory.cxx  path.cxx  render_context.cxx  renderer.cxx  screen.cxx
